# ColourlessTransformer

./: .gitignore  README.md  app.py  colourlesstransformer.bat  colourlesstransformer.py  install.bat  main.py  painttransformer.bat  painttransformer.py  pyproject.toml  requirements.txt  resize_and_process.py  start.bat  start.py  streamlit_description.md
images/: walkway.webm
inference/: inference.py
