[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "colourlesstransformer"
version = "0.1.0"
description = "An interface for Paint Transformer"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.3.2",
    "pillow>=11.3.0",
    "streamlit>=1.48.1",
    "torch>=2.8.0",
    "torchvision>=0.23.0",
]

[tool.setuptools.packages.find]
include = ["inference*"]
exclude = ["images*", "venv*", ".venv*", "__pycache__*", "*.egg-info*"]

[tool.setuptools.package-data]
"*" = ["*.pth", "*.txt", "*.md"]
